2015-06-03  SilverNexus
	* search.c: Refactor check for failure to load output file to occur
	  only if the file was just loaded.
	* configure.ac: Bump version to 0.02-dev.
	* Makefile.am: Add new file result_list.c.
	* main.c: Implement delayed recording of results.
	* search.c: Defer recording of results to after the directory tree is searched.
	  This solves a bug involving fileperuser writing to the results file while reading from it.
	* TODO: Removed statement about the bug mentioned above, as it is resolved.
	* result_list.c: Implemented a linked list of structures for finding search results.
	* result_list.h: Defines a linked list of structures for finding search results.

2015-06-02  SilverNexus
	* dir_list.h,
	  dir_list.c: Removed unused function free_dir_node().

2015-06-01  SilverNexus
	* search.c: Refactored search algorithm to use strstr and strcasestr.
	  In the process, also made multiple instances of the search string
	  discoverable by the search.
	* search.h: Removed obsolete function for searching.
	* parseArgs.c: Removed obsolete setting for length of search string.
	  Adjusting --no-case flag to set strstr or strcasestr.
	* settings.c: Changed default comparison function to strstr.
	  Removed initialization of search sting length settings value.
	* settings.h: Removed search string length from settings.
	* configure.ac: Updated requirements to match the new implementation.
	* README: Updated Requirements ssection to match the new implementation.

-----------------------------------------------------------------------------------------
                                      Changes for 0.02
-----------------------------------------------------------------------------------------

2015-06-01  SilverNexus
	* configure.ac: Make sure to check for a C99 compiler,
	  not just any C compiler.
	* README: Updated some information to ensure accuracy.

2015-05-30  SilverNexus
	* search.c: Refactored search algorithm to use nftw(3).